Updated Gradle version and added initial runtime generation routine